--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.1.3",
     "core-js": "^3.6.5",
+    "json-server": "^0.16.3",
     "vue": "^3.0.0"
   },
   "devDependencies": {
